docs: swagger updated
